# tess2-rust

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json
.claude/agents/: code-reviewer.md  fix-test-failures.md  test-writer.md
.claude/skills/checkin/: SKILL.md
.claude/skills/file-size-refactoring/: SKILL.md
.claude/skills/fix-test-failures/: SKILL.md
.claude/skills/testing-philosophy/: SKILL.md
.cursor/commands/: acp.md
.github/: FUNDING.yml
.github/workflows/: deploy-demo.yml
demo/: build.ts  dev.ts  index.html  package.json  server.ts  tsconfig.json
demo/src/: main.ts  render-canvas.ts  state.ts  wasm.ts
demo/src/demos/: basic_shapes.ts  butterfly.ts  interactive.ts  nested_squares.ts  output_modes.ts  polygon_with_hole.ts  shape_gallery.ts  single_triangle.ts  star.ts  unit_quad.ts  winding_rules.ts
demo/styles/: main.css
demo/wasm/: Cargo.toml
demo/wasm/src/: lib.rs
src/: dict.rs  geom.rs  lib.rs  mesh.rs  tess.rs
src/mesh/: mod.rs  tessellate.rs
src/tess/: dirty_regions.rs  geometry.rs  mod.rs  output.rs  region.rs  sweep.rs  tests.rs
tests/: cdt.rs  complex_polygons.rs  conformance_vs_csharp.rs  element_types.rs  file_compliance.rs  fuzz_glyph_discovery.rs  fuzz_no_panic.rs  glyph_repro_region_none.rs  glyph_repro_region_none_2.rs  glyph_repro_region_none_3.rs  libtess2_port.rs  lion_polygons.rs  lion_rotation_stress.rs  output_correctness.rs  poly_size.rs  three_d.rs  wasm_glyph_repro.rs  winding_rules.rs
tests/data/: lion_tess_reference.txt
tests/helpers/: mod.rs
tools/LionReferenceGen/: LionReferenceGen.csproj  Program.cs
