[package]
name = "tess2-rust"
version = "1.0.2"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "Pure Rust port of libtess2 — complete SGI polygon tessellation pipeline with winding rules, self-intersections, and multiple output modes"
repository = "https://github.com/larsbrubaker/tess2-rust"
homepage = "https://larsbrubaker.github.io/tess2-rust/"
documentation = "https://docs.rs/tess2-rust"
keywords = ["tessellation", "polygon", "graphics", "2d", "geometry"]
categories = ["graphics", "algorithms"]
readme = "README.md"
exclude = ["demo/", ".github/", ".claude/", ".cursor/", "trace_output*", "package.json", "CLAUDE.md"]

[workspace]
members = [".", "demo/wasm"]

[dependencies]


[dev-dependencies]
